cmake_minimum_required(VERSION 3.10)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# set the project name
project(week-3)

# add the executable
add_executable(sort sort.cpp)
add_executable(sort_a sort_a.cpp)
add_executable(sorted_strings sorted_strings.cpp)
add_executable(names1 names1.cpp)
add_executable(names2 names2.cpp)
add_executable(names3 names3.cpp)
add_executable(reversible_string reversible_string.cpp)
add_executable(incognizable incognizable.cpp)

