cmake_minimum_required(VERSION 3.10)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# set the project name
project(week-2)

# add the executable
add_executable(buses1 buses1.cpp)
add_executable(buses2 buses2.cpp)
add_executable(buses3 buses3.cpp)
add_executable(unique unique.cpp)
add_executable(synonyms synonyms.cpp)

