cmake_minimum_required(VERSION 3.10)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# set the project name
project(week-4)

# add the executable
add_executable(invertible_function_test invertible_function_test.cpp)
add_executable(invertible_function_test2 invertible_function_test2.cpp)
add_executable(input input.cpp)
add_executable(input2 input2.cpp)
add_executable(input3 input3.cpp)
add_executable(input4 input4.cpp)
add_executable(students students.cpp)

